syntax = "proto3";
option java_multiple_files = true;

package com.alibaba.arthas.channel.proto;

message StatusResult {
    string type = 1;
    sint32 statusCode = 2;
    string message = 3;
}

message MessageResult {
    string type = 1;
    string message = 2;
}

/*
 * Proto data format not supported for the command result
 */
message UnknownResult {
    string type = 1;
    string message = 2;
}

message SystemEnvResult {
    string type = 1;
    map<string, string> env = 2;
}

message VersionResult {
    string type = 1;
    string version = 2;
}

message SessionResult {
    string type = 1;
    int64 javaPid = 2;
    string sessionId = 3;
}

